feat: add Coordinates interface for latitude and longitude
feat: implement Haversine distance calculation between geographic coordinates

feat: add isValidCoordinates function to validate geographic coordinates

feat: change modelValue type to number and update input type to number

feat: add CoordinatePoint component for latitude and longitude input

feat: replace input fields with CoordinatePoint components for location input

feat: add TheHeader component and update app layout; enhance ESLint rules and Nuxt configuration

feat: add DispalyResult component to display distance between points

feat: refactor stylesheets; consolidate and enhance global styles, remove unused files

feat: add default location coordinates for distance calculations

feat: refactor styles and components; enhance layout, typography, and grid structure

feat: implement rounding utility and add geographic range constants; enhance distance calculation accuracy

feat: update application structure and components; enhance UI and distance calculation features

feat: update color variables and typography styles; enhance UI consistency and remove unused sizing styles

feat: refactor layout and enhance SEO; update main form structure and add meta tags for better accessibility

feat: update typography styles; consolidate font-weight definitions and add font-face declaration for improved consistency

feat: enhance form validation and error handling; add validation styles, reset functionality, and error messages for improved user experience

feat: add new SVG icons for GitHub, moon, refresh, and sun; enhance visual assets for improved UI

feat: integrate nuxt-svgo for optimized SVG handling; update button styles and enhance reset functionality in AlertCard

feat: add GPS icon and geolocation button; enhance form functionality with location retrieval and UI updates

feat: replace LazyElementGeolocationButton with LazyOptionsGeolocationButton; add new GeolocationButton component and SVG icon for improved

--- a/assets/styles/dev.scss
+++ b/assets/styles/dev.scss
@@ -2,13 +2,17 @@
 // Styles are available during development and ✖️ EXCLDDED from production build ✖️
 
 .red {
-  outline: 1ps dashed rgba(255, 0, 0, 0.4);
+  outline: 1px dashed rgba(255, 0, 0, 0.4);
 
   * {
-    outline: 1ps dotted rgba(0, 255, 0, 0.2);
+    outline: 1px dotted rgba(0, 255, 0, 0.2);
   }
 
   & > * {
-    outline: 1ps dotted rgba(0, 0, 255, 0.4);
+    outline: 1px dotted rgba(0, 0, 255, 0.4);
   }
 }
+
+// .card * {
+//   outline: 1px dotted rgba(0, 255, 0, 1);
+// }
