feat: enhance card styles with padding adjustments for better layout

--- a/assets/styles/global/_card.scss
+++ b/assets/styles/global/_card.scss
@@ -17,6 +17,7 @@
 
 .result {
   @extend .card;
+  padding-right: var(--mx);
 
   p {
     margin: 0;
@@ -40,6 +41,7 @@
 .alert.card {
   display: flex;
   justify-content: space-between;
+  padding-inline: var(--mx);
 
   .two {
     justify-self: flex-start;
